# GT-Audita

./: README.md
auditalogs/: README.md  diagram.drawio
auditalogs/server/: Cargo.toml  Config.toml
auditalogs/server/src/: channel.rs  config.rs  main.rs  state.rs  utils.rs
auditalogs/server/src/client/: elastic.rs  ethereum.rs  mod.rs
auditalogs/server/src/route/: elastic.rs  ethereum.rs  logs.rs  mod.rs
auditalogs/server/src/task/: elastic.rs  ethereum.rs  mod.rs  worker.rs
auditapath/: run.sh  (+3 more)
auditapath/polka-halfsiphash/: README.md  build_polka.py  calc_routeid.py  pyproject.toml  rest_endpoint.py  run_addition_topology.py  run_detour_topology.py  run_linear_topology.py  run_outoforder_topology.py  run_skipping_topology.py
auditapath/polka-halfsiphash/article/: anteprojeto.typ  p4syntax.sublime-syntax  tcc1.typ
auditapath/polka-halfsiphash/polka/: .gitignore  hdr_ipv4.p4  hdr_polka.p4  polka-attacker.p4  polka-core-common.p4  polka-edge.p4  siphash.p4
auditapath/polka-halfsiphash/polka/config/: s1-commands.txt  s10-commands.txt  s3-commands.txt  s8-commands.txt  s9-commands.txt
auditapath/polka-halfsiphash/polka/config_simple/: e1-commands.txt  e4-commands.txt
auditapath/polka-halfsiphash/script/: calc_digests_test.py  call_api.py  connect_api.py  linear_nodes.py  polka_nhop.py  scapy.py  simple.py  simple_nodes.py  siphash.py  siphash_test.py  tester.py  thrift.py  topo.py  utils.py
auditapath/polka-halfsiphash/script/bm_runtime/simple_pre/: constants.py
auditapath/polka-halfsiphash/script/bm_runtime/standard/: Standard-remote  Standard.py
(+88 files in other folders)
