[package]
name = "audita-server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.133"
alloy = { version = "0.12.2", features = ["full"] }
elasticsearch = "8.16.0-alpha.1"
sha2 = "0.10.8"
rand = "0.8.5"
chrono = "0.4"
thiserror = "2.0.12"
axum = "0.8.3"
toml = "0.8.20"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
