[project]
name = "polka-halfsiphash"
version = "0.1.0"
description = ""
authors = [
    { name = "Henriquelay", email = "37563861+Henriquelay@users.noreply.github.com" },
]
readme = "README.md"
requires-python = "~=3.8.20"
dependencies = [
    "scapy (>=2.6.1,<3.0.0)",
    "mininet (>=2.3.0.dev6,<3.0.0)",
    "crc>=7.1.0",
]

[tool.uv]
package = false

[project.scripts]
build_polka = "uv_scripts:build"

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "ruff>=0.6.7",
]

[tool.pytest.ini_options]
pythonpath = ".venv"
